--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -4,8 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscar Acuerdos...</title>
+    <script src="/tailwindcss.min.js"></script>
+    <script src="/htmx.min.js"></script>
+    <script src="/main.js"></script>
+    <link rel="stylesheet" href="/style.css">
 </head>
-<body>
-    <h1>Hello world!</h1>
+<body class="bg-stone-100 text-stone-900">
+    <div class="container h-full flex flex-col items-center px-8 mx-auto">
+        <div class="my-auto space-y-12">
+            <h1 class="text-5xl text-center">Busca Acuerdos</h1>
+            <form hx-get="/api/case" hx-target="#result" hx-swap="beforeend" class="space-y-8">
+                <div class="flex gap-4 justify-center">
+                    <div class="space-y-2">
+                        <label for="date" class="block font-medium">Fecha</label>
+                        <input type="date" id="date" name="date" class="border border-zinc-400 p-2 rounded" required>
+                    </div>
+                    <div class="space-y-2">
+                        <label for="type" class="block font-medium">Juzgado</label>
+                        <select name="type" id="type" class="border border-zinc-400 p-2 rounded" required>
+                            <option>Seleccione el Juzgado</option>
+                            <option value="aux1">Auxiliar 1</option>
+                            <option value="aux2">Auxiliar 2</option>
+                            <option value="civ2">Civil 2</option>
+                            <option value="civ3">Civil 3</option>
+                            <option value="civ4">Civil 4</option>
+                            <option value="fam1">Familiar 1</option>
+                            <option value="fam2">Familiar 2</option>
+                            <option value="fam3">Familiar 3</option>
+                            <option value="fam4">Familiar 4</option>
+                            <option value="fam5">Familiar 5</option>
+                            <option value="mer1">Mercantil 1</option>
+                            <option value="mer2">Mercantil 2</option>
+                            <option value="mer3">Mercantil 3</option>
+                            <option value="mer4">Mercantil 4</option>
+                            <option value="merOral">Mercantil Oral</option>
+                            <option value="seccc">Secretaria Colegiada</option>
+                            <option value="seccu">Secretaria Unitaria</option>
+                            <option value="cjmf1">CJM Familiar 1</option>
+                            <option value="cjmf2">CJM Familiar 2</option>
+                            <option value="trib1">Laboral</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="max-w-[80%] mx-auto space-y-2">
+                    <label for="id" class="px-2 block font-medium">Expediente</label>
+                    <div class="flex ">
+                        <input type="text" name="id" id="id" class="shrink grow basis-full px-4 rounded-l-full border border-r-0 border-zinc-400" placeholder="00469/2022" required>
+                        <button class="basis-1/3 bg-zinc-50 text-zinc-600 font-medium rounded-r-full border border-zinc-400 py-2 px-8">Enviar</button>
+                    </div>
+                </div>
+            </form>
+            <div class="grid grid-cols-12" id="result">
+               <div class="bg-stone-50 col-span-2 border border-zinc-400 p-2 rounded-tl-md">No.</div>
+               <div class="bg-stone-50 col-span-2 border border-zinc-400 p-2 border-l-0">Expediente</div>
+               <div class="bg-stone-50 col-span-4 border border-zinc-400 p-2 border-l-0">Naturaleza del Juicio</div>
+               <div class="bg-stone-50 col-span-4 border border-zinc-400 p-2 border-l-0 rounded-tr-md">Partes/Acuerdo</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
