--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -6,11 +6,12 @@
     <title>Buscar Acuerdos...</title>
     <script src="/tailwindcss.min.js"></script>
     <script src="/htmx.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script src="/main.js"></script>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body class="bg-stone-100 text-stone-900">
-    <div class="container h-full flex flex-col items-center px-8 mx-auto">
+    <div class="container h-full flex flex-col items-center md:px-8 mx-auto">
         <div class="my-auto space-y-12">
             <h1 class="text-5xl text-center">Busca Acuerdos</h1>
             <form hx-get="/api/case" hx-target="#result" hx-swap="beforeend" class="space-y-8">
@@ -42,19 +43,19 @@
                         </select>
                     </div>
                 </div>
-                <div class="max-w-[80%] mx-auto space-y-2">
+                <div class="px-4 md:max-w-[80%] mx-auto space-y-2">
                     <label for="id" class="px-2 block font-medium">Expediente</label>
                     <div class="flex ">
-                        <input type="text" name="id" id="id" class="shrink grow basis-full px-4 rounded-l-full border border-r-0 border-zinc-400" placeholder="00469/2022" required>
+                        <input type="text" name="id" id="id" class="shrink grow basis-2/3 px-4 rounded-l-full border border-r-0 border-zinc-400" placeholder="00469/2022" required>
                         <button class="basis-1/3 bg-zinc-50 text-zinc-600 font-medium rounded-r-full border border-zinc-400 py-2 px-8">Enviar</button>
                     </div>
                 </div>
             </form>
-            <div class="grid grid-cols-12" id="result">
-               <div class="bg-stone-50 col-span-2 border border-zinc-400 p-2 rounded-tl-md">No.</div>
-               <div class="bg-stone-50 col-span-2 border border-zinc-400 p-2 border-l-0">Expediente</div>
-               <div class="bg-stone-50 col-span-4 border border-zinc-400 p-2 border-l-0">Naturaleza del Juicio</div>
-               <div class="bg-stone-50 col-span-4 border border-zinc-400 p-2 border-l-0 rounded-tr-md">Partes/Acuerdo</div>
+            <div class="grid grid-cols-12 px-2 text-xs pb-6 md:text-base" id="result">
+               <div class="bg-stone-50 col-span-3 border border-zinc-400 p-2 rounded-tl-md md:col-span-2">Fecha</div>
+               <div class="bg-stone-50 col-span-3 border border-zinc-400 p-2 border-l-0 md:col-span-2">Expediente</div>
+               <div class="bg-stone-50 col-span-3 border border-zinc-400 p-2 border-l-0 md:col-span-4">Naturaleza</div>
+               <div class="bg-stone-50 col-span-3 border border-zinc-400 p-2 border-l-0 rounded-tr-md md:col-span-4">Acuerdo</div>
             </div>
         </div>
     </div>
