--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Buscar Acuerdos...</title>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap')
+        </style>
 		{{block "scripts" .}}
 		<script src="/htmx.min.js"></script>
 		<script
@@ -27,7 +30,11 @@
 				</nav>
 			</div>
 		</div>
-		{{end}} {{template "content" .}} {{block "footer" .}}
+		{{end}} 
+
+        {{template "content" .}}
+
+        {{block "footer" .}}
 		<footer class="hidden">footer</footer>
 		{{end}}
 	</body>
