--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -11,7 +11,7 @@
 		<script src="/htmx.min.js"></script>
 		<script
 			defer
-			src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+			src="/alpine.js"></script>
 		<script src="/main.js"></script>
 		<link rel="stylesheet" href="/style.css" />
 		{{end}}
