Embed styles in html template
For printing the report use a style tag with tailwind's styles for
chromium to style the document correctly

--- a/web/templates/reports/alert-report.html
+++ b/web/templates/reports/alert-report.html
@@ -9,7 +9,7 @@
 
     <div class="py-8"></div>
     <div class="">
-        <p class="font-medium">Saludos, Lic. Adahir Brambila</p>
+        <p class="font-medium">Saludos, {{printf "%v %v" .Name .Lastname}}</p>
         <p class="font-regular">Aquí tiene su reporte del día de hoy para los expedientes que solicitó</p>
     </div>
 
