--- a/web/templates/reports/layout.html
+++ b/web/templates/reports/layout.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
         {{block "title" .}}
-        <title>{{if ne .ReportTitle ""}} {{.ReportTitle}} {{else}}Reporte de Expedientes{{end}}</title>
+        <title>Reporte de Expedientes</title>
         {{end}}
-		<link rel="stylesheet" href="/style.css" />
+        {{template "css"}}
 	</head>
 	<body class="bg-stone-100 text-stone-950">
 		{{block "header" .}}
