--- a/web/templates/case-card.html
+++ b/web/templates/case-card.html
@@ -1,3 +1,4 @@
+<div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 h-16 w-16 rounded-full border-4 border-transparent border-t-primary-900 border-l-primary-900 hidden" x-ref="spinner" data-spinner=""></div>
 {{range .}}
 <div class="bg-stone-100 shadow shadow-stone-300 rounded p-4" data-case-card="{{.Case}}-{{.NatureCode}}">
     <h3 class="text-lg font-medium text-primary-800">{{.Case}} - {{.Nature}}</h3>
@@ -8,3 +9,14 @@
     </p>
 </div>
 {{end}}
+
+<button
+    class="rounded px-4 py-2 bg-primary-900 text-stone-50 self-center justify-self-center" 
+    data-search-again-btn=""
+    x-ref="search-again-btn"
+    @click="
+        let tl = gsap.timeline()
+        tl.to('[data-result-list]', { x: '0%', opacity: 0, duration: .4, ease: 'power2.inOut' })
+        tl.to('[data-form]', { x: '0%', opacity: 1, duration: .4, ease: 'power2.inOut' }, '<.2')
+        gsap.delayedCall(.4, () => { $event.target.parentElement.innerHTML = $refs.spinner.outerHTML; document.querySelector('[data-spinner]').classList.remove('hidden') })
+    ">Buscar de nuevo</button>
