--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -18,47 +18,90 @@
         <script>
             document.addEventListener("DOMContentLoaded", () => {
                 gsap.from("[data-menu-toggler]", { x: '100%' })
+
+                let navItems = document.querySelectorAll("[data-nav-selected]")
+
+                for (let it of navItems) {
+                    it.addEventListener('click', e => {
+                        let el = e.target;
+                        if (!el.dataset.navOption) {
+                            el = e.target.parentElement
+                        }
+                        let sel = document.querySelector('[data-nav-selected="true"]')
+
+                        if (sel) {
+                            sel.classList.remove('bg-primary-900', 'text-stone-50')
+                            sel.dataset.navSelected = ""
+                        }
+
+                        el.classList.add('bg-primary-900', 'text-stone-50')
+                        el.dataset.navSelected = 'true'
+
+                        gsap.to("[data-mobile-menu]", { width: '0%', ease: 'power2.inOut', duration: .5 })
+                    })
+                }
             })
-        </script>
-		{{end}}
+        </script> {{end}}
 
         {{block "style" .}}
         <style></style>
         {{end}}
 	</head>
-	<body class="bg-stone-50 text-primary-900 overflow-x-hidden">
+	<body class="text-primary-900 overflow-x-hidden overflow-y-auto">
 		{{block "header" .}}
-		<div class="py-4 px-5 ">
-			<div class="container flex justify-between mx-auto">
-				<h2 class="text-xl font-medium">TSJ Search</h2>
-                <nav class="hidden space-x-4">
-					<a class="font-medium text-lg" href="/">Inicio</a>
-					<a class="font-medium text-lg" href="/">Buscador</a>
-					<a class="font-medium text-lg" href="/">Servicios</a>
-					<a class="font-medium text-lg" href="/">Precios</a>
-					<a class="font-medium text-lg" href="/">Contacto</a>
-				</nav>
+        <div class="container bg-stone-50 py-4 px-5 flex justify-between mx-auto" x-data="">
+            <h2 class="text-xl font-medium">TSJ Search</h2>
+            <nav class="hidden space-x-4">
+                <a class="font-medium text-lg" href="/">Inicio</a>
+                <a class="font-medium text-lg" href="/">Buscador</a>
+                <a class="font-medium text-lg" href="/">Servicios</a>
+                <a class="font-medium text-lg" href="/">Precios</a>
+                <a class="font-medium text-lg" href="/">Contacto</a>
+            </nav>
 
-                <!-- Nav toggler -->
-                <div class="flex items-center ml-auto text-xs font-medium uppercase text-stone-50 bg-primary-900 px-2 rounded-full" data-menu-toggler="">
-                    menu
+            <!-- Nav toggler -->
+            <button 
+                class="ml-auto text-xs font-medium uppercase text-stone-50 bg-primary-900 px-2 rounded-full"
+                @click="gsap.to('[data-mobile-menu]', { width: '100%', ease: 'power2.inOut', duration: .3 })"
+                data-menu-toggler="" >
+                menu
 
-                    {{/* 
-                    <div class="relative space-y-1">
-                        <div class="w-6 h-0.5 bg-primary-900"></div>
-                        <div class="w-6 h-0.5 bg-primary-900"></div>
-                        <div class="w-6 h-0.5 bg-primary-900"></div>
-                    </div>
-                    */}}
+                {{/* 
+                <div class="relative space-y-1">
+                    <div class="w-6 h-0.5 bg-primary-900"></div>
+                    <div class="w-6 h-0.5 bg-primary-900"></div>
+                    <div class="w-6 h-0.5 bg-primary-900"></div>
                 </div>
-			</div>
-		</div>
+                */}}
+            </button>
+        </div>
+
+        <!-- Mobile Navigation Menu -->
+        <div class="fixed h-screen inset-0 text-primary-800 overflow-hidden z-50 w-0" data-mobile-menu="" x-data="">
+            <div class="relative flex flex-col bg-stone-50 ml-auto h-full p-4 z-10">
+                <div class="flex flex-initial items-center pb-4 relative z-10">
+                    <h3 class="text-xl font-bold">Menu</h3>
+                    <button class="ml-auto text-3xl font-bold" @click="gsap.to('[data-mobile-menu]', { width: 0, ease: 'power2.inOut', duration: .3 })">&times;</button>
+                </div>
+                <ul class="flex-auto space-y-2 text-lg font-medium">
+                    <li class="transition duration-300 bg-primary-900 text-stone-50 px-2 py-1 rounded" data-nav-selected="true" data-nav-option="0"><a class="" href="/">Inicio</a> </li>
+                    <li class="transition duration-300 px-2 py-1 rounded" data-nav-selected="" data-nav-option="1"><a class="" href="/#buscador">Buscador</a> </li>
+                    <li class="transition duration-300 px-2 py-1 rounded" data-nav-selected="" data-nav-option="2"><a class="" href="/#servicios">Servicios</a> </li>
+                    <li class="transition duration-300 px-2 py-1 rounded" data-nav-selected="" data-nav-option="3"><a class="" href="/#precios">Precios</a> </li>
+                    <li class="transition duration-300 px-2 py-1 rounded" data-nav-selected="" data-nav-option="4"><a class="" href="/#contacto">Contacto</a> </li>
+                </ul>
+                <ul class="flex flex-initial justify-between mt-auto">
+                    <li class="px-2 py-1"><a href="/iniciar-sesion">Iniciar Sesion</a></li>
+                    <li class="px-2 py-1 bg-primary-900 text-stone-50 rounded"><a href="/registro">Registrarse</a></li>
+                </ul>
+            </div>
+        </div>
 		{{end}} 
 
         {{template "content" .}}
 
         {{block "footer" .}}
-		<footer class="hidden">footer</footer>
+		<footer class="max-w-full bg-primary-900 text-stone-50 hidden">footer</footer>
 		{{end}}
 	</body>
 </html>
